CV Portofolio Commit

--- a/portofolio-cv_AncaLetitiaProvian/experience.html
+++ b/portofolio-cv_AncaLetitiaProvian/experience.html
@@ -17,7 +17,6 @@
     <div class="scroll-up-btn">
       <i class="fas fa-caret-square-up"></i>
     </div>
-    <!-- Add banner -->
     <nav class="navbar">
       <div class="max-width">
         <div class="logo">
@@ -116,17 +115,19 @@
               </div>
               <div class="description">
                 <h4>Technical Writer Manager</h4>
-                <p>
-                  I am in charge of the technical writer team in Bucharest and
-                  responsible with creating and updating Verifone's
-                  documentation content for ecommerce and in-store financial
-                  services, including API documentation.
-                </p>
-                <p>
-                  I sync and collaborate with Product Managers and engineering
-                  teams to document and update our ecommerce payment application
-                  services.
-                </p>
+                <ul>
+                  <li>
+                    I am in charge of the technical writer team in Bucharest and
+                    responsible with creating and updating Verifone's
+                    documentation content for ecommerce and in-store financial
+                    services, including API documentation.
+                  </li>
+                  <li>
+                    I sync and collaborate with Product Managers and engineering
+                    teams to document and update our ecommerce payment
+                    application services.
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
@@ -140,41 +141,46 @@
               <div class="interval">
                 <h5>2018 - 2020</h5>
                 <h5>Microchip</h5>
+                <h5>Technology</h5>
               </div>
               <div class="description">
                 <h4>Senior Technical Writer</h4>
-                <p></p>
-                <p>
-                  Brought improvement to operations and facilitated technical
-                  documentation creation by developing modular and reusable
-                  content for AVR and PIC microcontrollers.
-                </p>
-                <p>
-                  Collaborated with teams across cultures: Communicate & attend
-                  meetings with responsible engineers, peer tech writers, local
-                  engineers & foreign teams on projects to ensure technical
-                  accuracy of documents and customer satisfaction.
-                </p>
-                <p>
-                  Created technical presentations for teams in the Romania & USA
-                  (Chandler) sites: e.g., "Conditions and Variables Usage in SDL
-                  Publication Manager", "How to Edit Readme.md Files in
-                  BitBucket", "Business and technical writing essentials".
-                </p>
-                <p>
-                  Obtained Project Management (Passage 0: Individual
-                  Contributors) certification within Microchip, acquiring
-                  knowledge of interpersonal development skills, team formation,
-                  and goal establishment, responsibility and conflict
-                  management, and better communication and collaboration skills.
-                </p>
-                <p>
-                  Mentored and coached new hires: I have successfully made
-                  presentations for new technical writer colleagues - explained
-                  the information in an understandable way, made PowerPoint
-                  presentations on SDL introduction, use of Oxygen, and Adobe
-                  FrameMaker.
-                </p>
+
+                <ul>
+                  <li>
+                    Brought improvement to operations and facilitated technical
+                    documentation creation by developing modular and reusable
+                    content for AVR and PIC microcontrollers.
+                  </li>
+                  <li>
+                    Collaborated with teams across cultures: Communicate &
+                    attend meetings with responsible engineers, peer tech
+                    writers, local engineers & foreign teams on projects to
+                    ensure technical accuracy of documents and customer
+                    satisfaction.
+                  </li>
+                  <li>
+                    Created technical presentations for teams in the Romania &
+                    USA (Chandler) sites: e.g., "Conditions and Variables Usage
+                    in SDL Publication Manager", "How to Edit Readme.md Files in
+                    BitBucket", "Business and technical writing essentials".
+                  </li>
+                  <li>
+                    Obtained Project Management (Passage 0: Individual
+                    Contributors) certification within Microchip, acquiring
+                    knowledge of interpersonal development skills, team
+                    formation, and goal establishment, responsibility and
+                    conflict management, and better communication and
+                    collaboration skills.
+                  </li>
+                  <li>
+                    Mentored and coached new hires: I have successfully made
+                    presentations for new technical writer colleagues -
+                    explained the information in an understandable way, made
+                    PowerPoint presentations on SDL introduction, use of Oxygen,
+                    and Adobe FrameMaker.
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
@@ -188,28 +194,33 @@
               <div class="interval">
                 <h5>2017 - 2019</h5>
                 <h5>Microchip</h5>
+                <h5>Technology</h5>
               </div>
               <div class="description">
                 <h4>Technical Writer</h4>
-                <p>
-                  Created, edited, processed, and reviewed technical
-                  documentation for the 8-bit Application business unit of
-                  Microchip Technology in Bucharest using the following tools:
-                  SDL Publication Manager, Oxygen XML Authoring, Adobe
-                  FrameMaker, Adobe Acrobat Pro DC.
-                </p>
-                <p>
-                  Collaborated with application engineers to develop a wide
-                  range of technical documentation that is both detailed and
-                  comprehensible for end-users: Data Sheets, User Guides,
-                  Getting Started Guides, Application Notes, Product Briefs,
-                  Programming Specifications, Migration Guides, Release Notes,
-                  Errata Documents, Tutorials, Software Support Documents, etc.
-                </p>
-                <p>
-                  Edited and reviewed images, figures, and graphics using the
-                  following tools: InkScape, Microsoft Visio, Adobe Illustrator.
-                </p>
+                <ul>
+                  <li>
+                    Created, edited, processed, and reviewed technical
+                    documentation for the 8-bit Application business unit of
+                    Microchip Technology in Bucharest using the following tools:
+                    SDL Publication Manager, Oxygen XML Authoring, Adobe
+                    FrameMaker, Adobe Acrobat Pro DC.
+                  </li>
+                  <li>
+                    Collaborated with application engineers to develop a wide
+                    range of technical documentation that is both detailed and
+                    comprehensible for end-users: Data Sheets, User Guides,
+                    Getting Started Guides, Application Notes, Product Briefs,
+                    Programming Specifications, Migration Guides, Release Notes,
+                    Errata Documents, Tutorials, Software Support Documents,
+                    etc.
+                  </li>
+                  <li>
+                    Edited and reviewed images, figures, and graphics using the
+                    following tools: InkScape, Microsoft Visio, Adobe
+                    Illustrator.
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
@@ -226,21 +237,22 @@
               </div>
               <div class="description">
                 <h4>Web Editor/Content Writer/Translator</h4>
-                <p>
-                  Wrote articles, monitored and created summaries of political
-                  TV shows and interviews. Edited news content for the online
-                  news platform.
-                </p>
-                <p>
-                  Interviewed Romanian politicians and artists to write articles
-                  on various subjects and presented the content in an attractive
-                  manner to increase the number of unique readers on the
-                  website.
-                </p>
+                <ul>
+                  <li>
+                    Wrote articles, monitored and created summaries of political
+                    TV shows and interviews. Edited news content for the online
+                    news platform.
+                  </li>
+                  <li>
+                    Interviewed Romanian politicians and artists to write
+                    articles on various subjects and presented the content in an
+                    attractive manner to increase the number of unique readers
+                    on the website.
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
-
           <div class="jobs">
             <div class="time_line">
               <span class="time_point"></span>
@@ -250,14 +262,25 @@
               <div class="interval">
                 <h5>2014 - 2017</h5>
                 <h5>Mediafax</h5>
+                <h5>Press Agency</h5>
               </div>
               <div class="description">
                 <h4>Journalist/Web Editor/Reporter</h4>
-                <p>
-                  I created translations, web and video content, and monitored
-                  press for one of the biggest press agencies and mass-media
-                  content providers in Romania.
-                </p>
+                <ul>
+                  <li>
+                    I created translations, web and video content, and monitored
+                    press for one of the biggest press agencies and mass-media
+                    content providers in Romania.
+                  </li>
+                  <li>
+                    Learned basic HTML skills by using the DMS platform behind
+                    the mediafax.ro website.
+                  </li>
+                  <li>
+                    Used relevant tags and basic Search Engine Optimization
+                    (SEO) to index articles and news on Google.
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
