--- a/portofolio-cv_AncaLetitiaProvian/education.html
+++ b/portofolio-cv_AncaLetitiaProvian/education.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Letitia Provian CV</title>
     <link rel="stylesheet" href="style.css" />
+        <!-- Imports -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -12,6 +13,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <div class="scroll-up-btn">
@@ -45,7 +48,7 @@
           <div class="box">
             <i class="fas fa-graduation-cap"></i>
             <span>2003-2007</span>
-            <h3>Baccalaureate degree</h3>
+            <h3>Baccalaureate</h3>
             <p>
               “George Enescu” National Music College. As a graduate of "George
               Enescu" Music College, I have gained not only artistic skills such
