--- a/portofolio-cv_AncaLetitiaProvian/index.html
+++ b/portofolio-cv_AncaLetitiaProvian/index.html
@@ -11,7 +11,11 @@
     />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script> -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <div class="scroll-up-btn">
@@ -23,7 +27,6 @@
           <a href="#">Resu<span>mé</span></a>
         </div>
         <ul class="menu">
-          <!-- services -> education; skills -> experience; teams - projects -->
           <li><a href="#home" class="menu-btn">Home</a></li>
           <li><a href="#about" class="menu-btn">About</a></li>
           <li><a href="education.html" class="menu-btn">Education</a></li>
@@ -80,7 +83,7 @@
               coding skills. I like to keep an open mind and be in sync with
               technological development.
             </p>
-            <a href="#">Download CV</a>
+            <a href="CV-Anca_Letitia_Provian.pdf">Download CV</a>
           </div>
         </div>
       </div>
@@ -151,9 +154,31 @@
             </form>
           </div>
         </div>
+        <div>
+          <a
+            href="https://www.facebook.com/caelia.dalloway/"
+            target="_blank"
+            class="fa fa-facebook"
+          ></a>
+          <a
+            href="https://twitter.com/laetitiapeony"
+            target="_blank"
+            class="fa fa-twitter"
+          ></a>
+          <a href="mailto: laetitiaprovian@gmail.com" class="fa fa-google"></a>
+          <a
+            href="https://www.linkedin.com/in/letitia-provian-9b73ab18a/"
+            target="_blank"
+            class="fa fa-linkedin"
+          ></a>
+          <a
+            href="https://www.instagram.com/laetitiaprovian/"
+            target="_blank"
+            class="fa fa-instagram"
+          ></a>
+        </div>
       </div>
     </section>
-
     <!-- Footer section start -->
     <footer>
       <p>Made with <span role="img">❤️</span> by &copy; Letitia Provian</p>
