--- a/portofolio-cv_AncaLetitiaProvian/experience.html
+++ b/portofolio-cv_AncaLetitiaProvian/experience.html
@@ -7,11 +7,10 @@
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
   </head>
   <body>
     <div class="scroll-up-btn">
@@ -43,37 +42,47 @@
         <div class="experience-content">
           <div class="column left">
             <div class="text">My skills and experience</div>
-            <p>
-              Passionate and proactive Technical Writer Manager with 6 years of
-              experience in content editing and technical documentation, I have
-              developed a passion for technology and the IT industry. A former
-              journalist, content writer, and web editor, I have transitioned
-              from mass media to the software/engineering and financial services
-              industries. My play tools are DITA-authoring, Oxygen XML Author,
-              SDL Publication Manager, Inkscape, Adobe Acrobat, Adobe
-              Illustrator, Visio. With a keen eye on details, and trying to
-              learn the processes behind the projects, I have worked on a wide
-              range of technical documents: from data sheets, to user's guides,
-              training manuals, errata documents, application notes, technical
-              briefs, white papers, etc. I am constantly learning and developing
-              myself. I am currently interested in Project Management, team
-              leading, APIs and coding skills. I like to keep an open mind and
-              be in sync with technological development.
-            </p>
+            <ul>
+              <p>
+                &#128204;Ability to work efficiently and concentrate to release
+                deliverables (documentation/articles) under stress or pressure.
+              </p>
+              <p>
+                &#128205;Ability to learn new things quickly, flexibility, and
+                teamwork; e.g., I was able to learn quickly how to work with
+                DITA XML and Oxygen XML, and help engineers release
+                documentation processed in SDL.
+              </p>
+              <p>
+                &#128226;Good communication skills gained through my experience
+                as a journalist and reporter; ability to adapt to different
+                communication styles.
+              </p>
+              <p>
+                &#128213;Analytical skills, proficiency in understanding all
+                types of texts and writing texts in different styles from my
+                experience as a journalist and technical writer/editor.
+              </p>
+              <p>
+                &#129504;Good knowledge of Agile Scrum methodology, which
+                allowed me to process a large quantity of documentation and
+                maintain project tracking and transparency.
+              </p>
+            </ul>
             <a href="#subtitle">Read more</a>
           </div>
           <div class="column right">
             <div class="bars">
               <div class="info">
                 <span>HTML</span>
-                <span>90%</span>
+                <span>70%</span>
               </div>
               <div class="line html"></div>
             </div>
             <div class="bars">
               <div class="info">
                 <span>CSS</span>
-                <span>60%</span>
+                <span>42%</span>
               </div>
               <div class="line css"></div>
             </div>
@@ -98,9 +107,29 @@
               </div>
               <div class="line agile-scrum"></div>
             </div>
+            <div class="bars">
+              <div class="info">
+                <span>English</span>
+                <span>90%</span>
+              </div>
+              <div class="line english"></div>
+            </div>
+            <div class="bars">
+              <div class="info">
+                <span>French</span>
+                <span>80%</span>
+              </div>
+              <div class="line french"></div>
+            </div>
+            <div class="bars">
+              <div class="info">
+                <span>German</span>
+                <span>50%</span>
+              </div>
+              <div class="line german"></div>
+            </div>
           </div>
         </div>
-
         <div class="right_items">
           <h4 id="subtitle" name="subtitle" class="subtitle">Experience</h4>
           <div class="jobs">
