--- a/portofolio-cv_AncaLetitiaProvian/projects.html
+++ b/portofolio-cv_AncaLetitiaProvian/projects.html
@@ -7,18 +7,10 @@
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
   </head>
   <body>
     <div class="scroll-up-btn">
@@ -52,9 +44,32 @@
             <i class="fa-regular fa-keyboard"></i>
             <h3>Technical Writing Samples</h3>
             <p>
-              Create, edit, process, and review technical documentation using
-              CMS tools. I published Application Notes, Tech Briefs, User’s
-              Guides, & Errata Documents.
+              I create, edit, process, and review technical documentation using
+              CMS tools. I published
+              <a
+                class="anchor-link"
+                href="https://ww1.microchip.com/downloads/en/AppNotes/Capacitive-Touch-Sensor-Design-Guide-DS00002934-B.pdf"
+                target="_blank"
+                >Application Notes</a
+              >,
+              <a
+                class="anchor-link"
+                href="https://ww1.microchip.com/downloads/en/AppNotes/TB3217-Getting-Started-with-TCA-DS90003217.pdf"
+                target="_blank"
+                >Tech Briefs</a
+              >,
+              <a
+                class="anchor-link"
+                href="https://ww1.microchip.com/downloads/en/DeviceDoc/QTouch-Modular-Library-PTC-UG-DS40001986E.pdf"
+                target="_blank"
+                >User’s Guides</a
+              >, &
+              <a
+                class="anchor-link"
+                href="https://ww1.microchip.com/downloads/en/DeviceDoc/PIC18F27-47-57Q43-Data-Sheet-40002147F.pdf"
+                target="_blank"
+                >Data Sheets</a
+              >.
             </p>
           </div>
           <div class="card">
@@ -63,7 +78,21 @@
             <p>
               Wrote articles, performed interviews, created and edited videos,
               uploaded news, editorial materials, interviews, and video content
-              on mediafax.ro and psnews.ro.
+              on
+              <a
+                class="anchor-link"
+                href="https://www.mediafax.ro/autor/letitia-provian"
+                target="_blank"
+                >mediafax.ro</a
+              >
+              and
+              <a
+                class="anchor-link"
+                href="https://psnews.ro/author/letitia-provian"
+                target="_blank"
+              >
+                psnews.ro</a
+              >.
             </p>
           </div>
           <div class="card">
@@ -71,16 +100,38 @@
             <h3>Poems</h3>
             <p>
               I have attended several poetry classes and Creative Writing
-              Workshops - Mornin' Poets organized by Revista de Povestiri:
-              February 2019-October 2022.
+              Workshops - Mornin' Poets organized by Revista de Povestiri. Read
+              <a
+                class="anchor-link"
+                href="https://www.revistadepovestiri.ro/tag/letitia-provian/"
+                target="_blank"
+                >my poems here</a
+              >.
             </p>
           </div>
           <div class="card">
             <i class="fa-solid fa-pencil"></i>
             <h3>Publications</h3>
             <p>
-              I have published several academic papers on theory of literature
-              and world literature, as well as poems in anthologies.
+              I have published several academic papers on
+              <a
+                class="anchor-link"
+                href="https://editura-unibuc.ro/produs/afinitati-imagine-text-ii/"
+                target="_blank"
+                >theory of literature</a
+              >
+              and
+              <a
+                class="anchor-link"
+                href="https://editura-unibuc.ro/produs/literatura-si-artele-explorari-comparatiste/"
+                target="_blank"
+                >world literature</a
+              >, as well as poems in
+              <a
+                class="anchor-link"
+                href="https://fractalia.ro/shop/colectii-fractalia/literatura-romana-contemporana/andrei-zbirnea-doppelganger-antologia-mornin-poets-primele-patru-sezoane-2018-2020/"
+                >anthologies</a
+              >.
             </p>
           </div>
 
@@ -88,9 +139,15 @@
             <i class="fa-solid fa-camera"></i>
             <h3>Photography</h3>
             <p>
-              I have a generous collection of travel photos as well as art
-              photos. My dream is to organize an exihibition one day with all my
-              photography.
+              I have a vast collection of travel and art photos. My dream is to
+              organize an exihibition one day with all my photography. Check out
+              my photos on
+              <a
+                class="anchor-link"
+                href="https://www.instagram.com/laetitiaprovian/"
+                target="_blank"
+                >Instagram</a
+              >.
             </p>
           </div>
 
@@ -98,9 +155,21 @@
             <i class="fa-solid fa-music"></i>
             <h3>Music</h3>
             <p>
-              As a former gradute of "George Enescu" Music College, I learned to
-              play the flute and piano. I have obtained prizes at national music
-              contests. I play on demand and for friends :)
+              As a former gradute of "George Enescu" Music College, I play the
+              <a
+                class="anchor-link"
+                href="https://www.youtube.com/watch?v=com5gPoZ8sI&t=39s"
+                target="_blank"
+                >flute</a
+              >
+              and
+              <a
+                class="anchor-link"
+                href="https://www.youtube.com/watch?v=4591dCHe_sE"
+                target="_blank"
+                >piano</a
+              >. I have obtained prizes at national music contests. I play on
+              demand and for friends &#128512;.
             </p>
           </div>
         </div>
